--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,21 @@
 {
-    "env": {
-        "node": true,
-        "browser": true,
-        "es2021": true,
-        "shared-node-browser": true,
-        "jest": true
+  "env": {
+    "node": true,
+    "browser": true,
+    "es2021": true,
+    "shared-node-browser": true,
+    "jest": true
+  },
+  "extends": ["eslint:recommended", "plugin:react/recommended"],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
     },
-    "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended"
-    ],
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-        "react/prop-types": "off"
-    }
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["react"],
+  "rules": {
+    "react/prop-types": "off"
+  }
 }
