--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches: ["main"]
     paths-ignore:
-      - 'README.md'
-      - 'TODO.md'
+      - "README.md"
+      - "TODO.md"
   workflow_dispatch:
 
 permissions:
@@ -39,7 +39,7 @@ jobs:
       - name: Push
         run: |
           git push origin main
-      
+
       - name: Install requirements
         run: npm install
 
