try changing start_url to point to index.html

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
   "dir": "auto",
   "lang": "en-US",
   "display": "standalone",
-  "start_url": "../.",
+  "start_url": "../index.html",
   "background_color": "#373647",
   "theme_color": "#373647",
   "orientation": "any",
