--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
   "license": "",
   "dependencies": {
     "@skedwards88/word_lists": "latest",
-    "@skedwards88/word_logic": "^2.0.2",
+    "@skedwards88/word_logic": "2.0.4",
     "mobile-drag-drop": "^2.3.0-rc.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "seedrandom": "^3.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
