issue template changes don't trigger deploy

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ on:
     paths-ignore:
       - "README.md"
       - "TODO.md"
+      - ".github/ISSUE_TEMPLATE/*"
   workflow_dispatch:
 
 permissions:
