--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "mobile-drag-drop": "^2.3.0-rc.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "seedrandom": "^3.0.5"
+    "seedrandom": "3.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
