fix directions about where to find version number

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -10,7 +10,7 @@ body:
     id: version
     attributes:
       label: Version
-      description: What version of the app are you using? You can find this info by clicking the heart button in the app.
+      description: What version of the app are you using? You can find this info by clicking the info button in the app and looking at the version number below the "Play" button.
     validations:
       required: true
   - type: textarea
