trigger on repo dispatch update word list event

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,8 @@ on:
       - ".prettierrc.json"
       - ".stylelintrc.json"
   workflow_dispatch:
+  repository_dispatch:
+    types: [update-word-lists]
 
 permissions:
   contents: write # Required for bumping version (read-only required for deployment)
