--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "webpack-dev-server --mode development",
     "start": "webpack-dev-server",
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --config=jest.config.cjs",
     "lint": "npx eslint --ignore-path .gitignore .",
     "prettier": "npx prettier --write .",
     "style": "npx stylelint '**/*.css' --fix"
@@ -28,10 +28,12 @@
     "seedrandom": "3.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.12",
-    "@babel/preset-env": "^7.16.11",
+    "@babel/core": "^7.23.2",
+    "@babel/plugin-syntax-import-assertions": "^7.22.5",
+    "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.16.7",
     "@eslint/create-config": "github:eslint/create-config",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.6.0",
@@ -39,6 +41,7 @@
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.7.0",
     "prettier": "^2.6.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.6.0",
