--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,10 +44,6 @@ jobs:
       - name: Bump version
         run: npm version patch
 
-      - name: Push
-        run: |
-          git push origin main
-
       - name: Install requirements
         run: npm install
 
@@ -59,6 +55,20 @@ jobs:
 
       - name: Print packages
         run: npm list --depth=0
+
+      # This keeps package-lock.json up to date with the deployed game
+      - name: Commit the word list update if there are changes to commit
+        run: |-
+          if git diff-index --quiet HEAD --; then
+              echo "No changes to commit."
+          else
+              git add -A
+              git commit -m "Update @skedwards88/word_lists"
+          fi
+
+      - name: Push the version bump and potential word_list update
+        run: |
+          git push origin main
 
       - name: Build
         run: npm run build
