try git push instead of git push origin main

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,7 +68,7 @@ jobs:
 
       - name: Push the version bump and potential word_list update
         run: |
-          git push origin main
+          git push
 
       - name: Build
         run: npm run build
