only commit if there are unstaged changes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -59,8 +59,8 @@ jobs:
       # This keeps package-lock.json up to date with the deployed game
       - name: Commit the word list update if there are changes to commit
         run: |-
-          if git diff-index --quiet HEAD --; then
-              echo "No changes to commit."
+          if git diff --exit-code > /dev/null; then
+            echo "No changes to commit."
           else
               git add -A
               git commit -m "Update @skedwards88/word_lists"
