--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,10 +60,10 @@ jobs:
       - name: Commit the word list update if there are changes to commit
         run: |-
           if git diff --exit-code > /dev/null; then
-            echo "No changes to commit."
+            echo "No changes to commit"
           else
-              git add -A
-              git commit -m "Update @skedwards88/word_lists"
+            git add -A
+            git commit -m "Update @skedwards88/word_lists"
           fi
 
       - name: Push the version bump and potential word_list update
