add stylelint to linter workflow

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,3 +18,6 @@ jobs:
 
       - name: Prettier
         run: npx prettier -c src/ README.md .github/workflows
+
+      - name: Stylelint
+        run: npx stylelint '**/*.css'
