detect react version in eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,5 +22,10 @@
   "rules": {
     "react/prop-types": "off"
   },
-  "ignorePatterns": ["dist/*"]
+  "ignorePatterns": ["dist/*"],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
