fix stylelint errors

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,6 +3,7 @@
   "rules": {
     "selector-class-pattern": null,
     "selector-id-pattern": null,
-    "custom-property-pattern": null
+    "custom-property-pattern": null,
+    "declaration-block-no-redundant-longhand-properties": null
   }
 }
