--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "homepage": "https://github.com/skedwards88/crossjig#readme",
   "dependencies": {
     "@skedwards88/word_lists": "latest",
-    "@skedwards88/word_logic": "^3.0.8",
+    "@skedwards88/word_logic": "4.0.1",
     "lodash.clonedeep": "^4.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
