--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^29.7.0",
+    "jest-localstorage-mock": "^2.4.26",
     "prettier": "^2.6.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.6.0",
